--- a/css/omni.css
+++ b/css/omni.css
@@ -114,6 +114,9 @@ nav a.btn {
   box-shadow: 2px 2px 6px 0px #045eaa, -1px -1px 4px 0px #9bdbf4; }
 
 nav a.btn:hover {
+  color: #fff;
+}
+nav a.btn.down {
   color: rgba(221, 236, 246, 0.85);
   background: #0093d0;
   background: url(../img/m_buttonDWN_Art_hover.png) 95% 50% no-repeat;
@@ -592,13 +595,20 @@ body.dark .section-head{
 body.dark .section-head h1{
   box-shadow: 1px 4px 4px 0 rgba(0, 0, 0, 0.15);
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.15);
-  background: linear-gradient(to bottom, rgba(4,94,170,1) 0%, rgba(255,255,255,0.5) 98%);
+  background: linear-gradient(to bottom, rgba(4,94,170,1) 0%, rgba(255,255,255,0.25) 98%);
   /*color: rgba(4,94,170,1);*/
   color: rgba(255,255,255,0.75);
   /*border-top: rgb(4,94,170);*/
   border: none;
   margin-left: 10px;
 }
+body.dark #about .details p {
+  color: rgba(255,255,255,0.75);
+}
+body.dark #about .details .title{
+  color: #0093d0 !important;
+}
+
 @media all and (min-width: 920px) {
   nav ul {
     width: auto;
