--- a/css/omni.css
+++ b/css/omni.css
@@ -571,6 +571,7 @@ body.dark #content .section .entry h3{
   background: linear-gradient(to bottom, rgba(0,0,0,0.15) 0%, rgba(0,0,0,0) 100%);
   color: rgba(255,255,255,0.75);
 }
+body.dark #about h3,
 body.dark #content .section .entry.quote h3{
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
   color: rgba(255,255,255,0.75);
@@ -586,6 +587,10 @@ body.dark #content .section .entry .desc p a,
 body.dark #content .section .entry .desc .title{
   color: rgba(255,255,255,0.5) !important;
 }
+body.dark ul,
+body.dark li,
+body.dark a i,
+body.dark a,
 body.dark .section a{
   color: rgba(255,255,255,0.75);  
 }
@@ -607,6 +612,16 @@ body.dark #about .details p {
 }
 body.dark #about .details .title{
   color: #0093d0 !important;
+}
+body.dark #about .job p{
+  /*color: rgba(255,255,255,0.75);*/
+}
+body.dark #about li{
+  margin: 10px 1% 10px 4%;
+}
+body.dark #about .job .less{
+  /*color: rgba(0,0,0,0.35);*/
+  color: #6dbce1;
 }
 
 @media all and (min-width: 920px) {
