--- a/focus/css/style.css
+++ b/focus/css/style.css
@@ -4,34 +4,50 @@ html{
 *,*:before,*:after{
 	box-sizing: inherit;
 }
+a{
+	color: inherit;
+	text-decoration: none;
+}
+a:hover{
+	color: #fff;
+}
 body{
 	margin: 0;padding: 0;
-	background: #0058AD;
-}
-header,
-main{
-	width: 800px;
-	margin: 0 auto;
-}
-header .title{
 	font-family: 'Asap Bold', sans-serif;
-}
-.toggle-switch{
-	position: relative;
-	width: 60px;height: 30px;
-	background: #5b6c79;border: 2px solid #5b6c79;
-	border-radius: 17px;
-	transition: background 0.5s;
-	margin: 1em;
 }
 nav,
 .toggle-switch{
-	display: inline-block;	
+	position: absolute;
+	top: 1em;
+	left: 1em;
+	background: rgba(0,75,148,.35);
+	/*color: rgba(200,228,241,.6);*/
+	/*color: rgba(200,228,241,.6);*/
+	color: #C8E4F1;
+	border-radius: 17px;
+	-webkit-box-shadow: inset 3px 3px 4px #003263, inset -1px -1px 4px rgba(200,228,241,.75);
+	box-shadow: inset 3px 3px 4px #003263, inset -1px -1px 4px rgba(200,228,241,.75);
+	font-size: 14px;
+	height: 30px;
+}
+nav{
+	left: 95px;
+	width: 705px;
+}
+.toggle-switch{
+	width: 60px;height: 30px;
+	transition: background 0.5s;
+}
+.toggle-switch svg:last-child,
+.toggle-switch i:last-child{
+	position: absolute;
+	top: 8px;
+	right: 10px;
 }
 .toggle-switch:after{
 	display: block;
 	content: "";
-	background: #fff;
+	background: #0092D3;
 	width: 30px;height: 30px;
 	position: absolute;
 	top: 0;left: 0;
@@ -40,26 +56,61 @@ nav,
 	box-shadow: 0 3px 6px rgba(0,0,0,.5);
 	transition: all 0.25s ease-in-out;
 }
+nav .copyright,
+.toggle-switch span{
+	position: absolute;
+	top: 0;left: 0;
+	width: 100%;
+	padding: 7px 10px;
+}
+nav .btn-group{
+	position: absolute;
+	right: 0;
+}
 .toggle-screenreader,
 #theme{
 	display: none;
-}
-#theme:checked ~ label.toggle-switch{
-	background: #008a14;
-	border-color: #008a14;
 }
 #theme:checked ~ label.toggle-switch:after{
 	transform: translate3d(100%,0,0);
 }
 #theme:checked ~ main{
-	background: #000;
-	color: #fff;
+	background: #0058AD;
+	color: #C8E4F1;
 }
 #theme ~ main{
-	color: #000;
-	background: #fff;
+	color: #004B94;
+	background: #C8E4F1;
 }
 main{
-	padding: 1em;
+	padding: 70px 1em 1em;
 	transition: background 0.5s,color 0.5s
+}
+figure{
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
+	-webkit-margin-start: 0;
+	-webkit-margin-end: 0;
+}
+figure.plaque{
+	background: #0092D3;
+	border-radius: 10px;
+	padding: 15px 15px 5px 15px;
+	display: inline-block;
+	-webkit-box-shadow: 2px 2px 10px rgba(0,0,0,.15),
+		inset -4px -4px 10px #0058AD,
+		inset 4px 4px 10px #C8E4F1;
+	box-shadow: 2px 2px 10px rgba(0,0,0,.15),
+		inset -4px -4px 10px #0058AD,
+		inset 4px 4px 10px #C8E4F1;
+}
+/*header,
+main,*/
+article{
+	width: 800px;
+	margin: 0 auto;
+}
+article video{
+	-webkit-box-shadow: 0 10px 6px -6px rgba(0,0,0,.35);
+	box-shadow: 0 10px 6px -6px rgba(0,0,0,.35);
 }
