--- a/focus/css/style.css
+++ b/focus/css/style.css
@@ -19,10 +19,11 @@ nav,
 .toggle-switch{
 	position: absolute;
 	top: 1em;
-	left: 1em;
+	/*left: 1em;*/
 	background: rgba(0,75,148,.35);
 	/*color: rgba(200,228,241,.6);*/
-	color: #C8E4F1;
+	/*color: #C8E4F1;*/
+	color: #004B94;
 	border-radius: 17px;
 	-webkit-box-shadow: inset 3px 3px 4px #003263, inset -1px -1px 4px rgba(200,228,241,.75);
 	box-shadow: inset 3px 3px 4px #003263, inset -1px -1px 4px rgba(200,228,241,.75);
@@ -30,10 +31,14 @@ nav,
 	height: 30px;
 }
 nav{
-	left: 95px;
-	width: 705px;
+	/*left: 95px;*/
+	right: 1em;	
+	/*width: 705px;*/
+	/*display: grid;	*/
+	display: flex;	
 }
 .toggle-switch{
+	left: 1em;	
 	width: 60px;height: 30px;
 	transition: background 0.5s;
 }
@@ -51,20 +56,32 @@ nav{
 	position: absolute;
 	top: 0;left: 0;
 	border-radius: 100%;
-	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5);
-	box-shadow: 0 3px 6px rgba(0,0,0,.5);
+	/*-webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5);*/
+	/*box-shadow: 0 3px 6px rgba(0,0,0,.5);*/
+	-webkit-box-shadow: 2px 2px 10px rgba(0,0,0,.15),
+		inset -2px -2px 10px #0058AD,
+		inset 2px 2px 10px #C8E4F1;
+	box-shadow: 2px 2px 10px rgba(0,0,0,.15),
+		inset -2px -2px 10px #0058AD,
+		inset 2px 2px 10px #C8E4F1;
 	transition: all 0.25s ease-in-out;
 }
 nav .copyright,
 .toggle-switch span{
-	position: absolute;
-	top: 0;left: 0;
-	width: 100%;
+	/*position: absolute;*/
+	/*top: 0;*/
+	/*width: 100%;*/
 	padding: 7px 10px;
 }
+nav .copyright a .fa-twitter{
+	margin: 0 0.5em;
+}
+.toggle-switch span{
+	display: block;
+}
 nav .btn-group{
-	position: absolute;
-	right: 0;
+	/*position: absolute;*/
+	/*right: 0;*/
 }
 .toggle-screenreader,
 #theme{
@@ -81,6 +98,10 @@ nav .btn-group{
 	color: #004B94;
 	background: #C8E4F1;
 }
+#theme:checked ~ nav,
+#theme:checked ~ .toggle-switch{
+	color: #C8E4F1;
+}
 main{
 	padding: 70px 1em 1em;
 	transition: background 0.5s,color 0.5s
@@ -90,6 +111,24 @@ figure{
 	-webkit-margin-after: 0;
 	-webkit-margin-start: 0;
 	-webkit-margin-end: 0;
+}
+main header{
+	margin-bottom: 2em;
+}
+main header .title{
+	font-size: 22px;
+	text-transform: uppercase;
+	/*color: #004B94;*/
+	/*text-shadow: 1px 1px 1px #003263, -1px -1px 1px rgba(0,75,148,.5);*/
+	color: #003263;
+	margin-left: 10px;
+	display: inline-block;
+	line-height: 15px;
+	position: relative;
+	top: -10px;
+}
+.and{
+	font: 20px Arial;
 }
 nav .btn-group{
 	display: flex;
@@ -107,6 +146,14 @@ figure.plaque{
 		inset -4px -4px 10px #0058AD,
 		inset 4px 4px 10px #C8E4F1;
 }
+nav .btn-group a{
+	-webkit-box-shadow: 2px 2px 10px rgba(0,0,0,.15),
+		inset -2px -2px 10px #0058AD,
+		inset 2px 2px 10px #C8E4F1;
+	box-shadow: 2px 2px 10px rgba(0,0,0,.15),
+		inset -2px -2px 10px #0058AD,
+		inset 2px 2px 10px #C8E4F1;
+}
 nav .btn-group a:first-child{ border-radius: 10px 0 0 10px; }
 nav .btn-group a:last-child{ border-radius: 0 10px 10px 0; }
 nav .btn-group a{
@@ -116,13 +163,28 @@ nav .btn-group a{
 nav .btn-group a:hover{
 	-webkit-box-shadow: none;
 	box-shadow: none;
+	-webkit-box-shadow: 0 0 5px rgba(0,0,0,.15),
+		inset -1px -1px 5px #003263,
+		inset 1px 1px 5px #C8E4F1;
+	box-shadow: 0 0 5px rgba(0,0,0,.15),
+		inset -1px -1px 5px #003263,
+		inset 1px 1px 5px #C8E4F1;
 	background: #257ec5;
 }
+/*body,*/
+/*main,*/
 article{
 	width: 800px;
 	margin: 0 auto;
+	display: grid;
+	grid-template-columns: 530px auto;
+	grid-gap: 30px;
 }
 article video{
 	-webkit-box-shadow: 0 10px 6px -6px rgba(0,0,0,.35);
 	box-shadow: 0 10px 6px -6px rgba(0,0,0,.35);
+}
+article span,
+article video{
+	flex: 530px auto;
 }
