--- a/focus/css/fonts.css
+++ b/focus/css/fonts.css
@@ -6,3 +6,7 @@
 	font-family: 'Asap Med';
 	src: url('../fonts/Asap/Asap-Medium.ttf') format('truetype');
 }
+@font-face{
+	font-family: 'PT Serif';
+	src: url('../fonts/PT_Serif/PT_Serif-Web-BoldItalic.ttf') format('truetype');
+}
